# rag_fitness_bot

./: pyproject.toml  requirements.txt
Scripts/: crawl_fitness.py  index_to_qdrant.py
backend/: rag.py
chainlit_app/: app.py
data/: fitness_1.md  fitness_2.md  fitness_3.md  healthline_nutrition.md
qdrant_local/: meta.json
